--- a/frontend/src/components/Calendar/CalendarPage.module.css
+++ b/frontend/src/components/Calendar/CalendarPage.module.css
@@ -1,8 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&family=Poppins:wght@400;500;600&display=swap');
 
-.calendarForm {
+.calendarFormBorder {
     display: block;
+    display: flex;
+    justify-content: center;
     /* justify-content: space-around; */
+}
+
+.calendarForm{
+    width: 1200px;
+    height: 500px
 }
 
 .calendarHeader {
@@ -26,22 +33,25 @@
     /* text-shadow: 0.2rem 0.05rem 0rem #ff2e63; */
     text-align: left;
     /* margin-left: 9rem; */
-    margin : 0rem 0rem 2rem 9rem;
+    margin : 0rem 0rem 2rem 0rem;
+}
+
+.calendarBodyBorder{
+    width: 100%;
+    height: 100%;
 }
 
 .calendarBody {
-    position: relative;
-    justify-content: center;
-    width: 50rem;
-    height: 30rem;
-    margin: 1rem 0rem 2rem 10rem;
+    /* height: 100%; */
     border-color: whitesmoke;
+    overflow: auto;
+    margin-top: 30px;
 }
 
 .calendarTop {
     display: flex;
     /* margin-right: 10rem; */
-    margin-left: 18rem;
+    margin-left: 28%;
 }
 
 .month {
@@ -56,7 +66,8 @@
 }
 
 .week {
-    height: 5rem;
+    width: 10px;
+    height: 4rem;
     display: table-row;
 }
 
@@ -72,6 +83,8 @@
     border: 0.1rem solid white;
     font-weight: bold;
     font-family: 'Poppins', sans-serif;
+    width : 13%;
+    height : 16%;
 }
 
 .icon {
@@ -93,6 +106,6 @@
 }
 
 .partyicon {
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
 }
