--- a/frontend/src/components/RoomList/RoomList.module.css
+++ b/frontend/src/components/RoomList/RoomList.module.css
@@ -1,3 +1,4 @@
+
 .container{
     margin: 20px;
 }
@@ -33,7 +34,7 @@
     height: 28px;
     border-radius: 15px;
     border-style: none;
-    /* padding: 0; */
+    padding: 0;
     right: 5px;
     top : 2px;
     background-color: #08d9d6;
