--- a/frontend/src/common/css/Main.css
+++ b/frontend/src/common/css/Main.css
@@ -86,6 +86,7 @@
 }
 
 .slider {
+  
   overflow: hidden;
   position: relative;
   height: 100%;
@@ -94,12 +95,15 @@
 
 .slider__slides {
   margin-top: 15%;
+  
   position: relative;
   width: 80%;
   height: 60%;
   display: inline-block;
-  /* border: 2px solid black;
-    border-radius: 15px; */
+  background: rgba(0, 0, 0, 0.3);
+  /* /* border: 2px solid black; */
+  border-radius: 45px;
+  
 }
 
 .slider__slide-parts {
@@ -113,6 +117,7 @@
 }
 .slider__slide-part {
   position: relative;
+  
   width: 100%;
   height: 100%;
 }
@@ -122,7 +127,8 @@
   border-radius: 50px;
   width: 100%;
   height: 100%;
-  background-size: 0 0;
+  border-style: none;
+  background-size: contain;
   background-repeat: no-repeat;
   transition: transform 0.5s ease-in-out;
 }
@@ -132,7 +138,9 @@
   width: 100%;
   height: 100%;
   background-image: inherit;
-  background-size: cover;
+  background-size: contain;
+  background-repeat: no-repeat;
+  border-style: none;
   background-position: center center;
   transition: opacity 0.25s;
   opacity: 0;
@@ -288,6 +296,7 @@
     overflow: hidden;
     position: relative;
     border-radius: 50px;
+    border-style: none;
     width: 100%;
     height: 100%;
     background-size: 0 0;
@@ -297,10 +306,12 @@
   .slider__slide-part-inner:before {
     content: "";
     position: absolute;
+    border-style: none;
     width: 100%;
     height: 100%;
     background-image: inherit;
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
     background-position: center center;
     transition: opacity 0.25s;
     opacity: 0;
@@ -459,6 +470,7 @@
     overflow: hidden;
     position: relative;
     border-radius: 50px;
+    border-style: none;
     width: 100%;
     height: 100%;
     background-size: 0 0;
@@ -469,9 +481,11 @@
     content: "";
     position: absolute;
     width: 100%;
+    border-style: none;
     height: 100%;
     background-image: inherit;
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
     background-position: center center;
     transition: opacity 0.25s;
     opacity: 0;
