--- a/frontend/src/components/Calendar/ConferenceDetail.module.css
+++ b/frontend/src/components/Calendar/ConferenceDetail.module.css
@@ -288,8 +288,11 @@
   }
   .closeBtn {
     float: right;
+    width: 30px;
+    height: 30px;
     margin: 15px 30px 0px 0px;
-    border-radius: 3px;
+    border-radius: 8px;
+    background-color: #eee;
   }
   .rightTop{
     display: flex;
