[Add] 로그인, 회원가입 UI 변경

--- a/frontend/src/components/Calendar/CalendarPage.module.css
+++ b/frontend/src/components/Calendar/CalendarPage.module.css
@@ -1,61 +1,51 @@
 @import url("https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&family=Poppins:wght@400;500;600&display=swap");
 
-.calendarFormBorder {
-    display: block;
-    display: flex;
-    justify-content: center;
-    /* justify-content: space-around; */
+.calendadrFormBorder {
+  display: flex;
+  justify-content: center;
+  /* justify-content: space-around; */
 }
 
-.calendarForm{
-    width: 1200px;
-    height: 500px
+.calendarForm {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10vh;
 }
 
 .calendarHeader {
   position: relative;
   display: flex;
+  flex-direction: column;
   background-color: transparent;
-  padding: 0;
-  text-align: center;
   justify-content: center;
   color: tomato;
-  justify-content: unset;
-  padding: 4rem 0rem 0rem 0rem;
-  align-items: flex-end;
 }
 
 .calendarTitle {
-    position: relative;
-    font-size: 2.5rem;
-    font-weight: bolder;
-    color: #eeee;
-    /* text-shadow: 0.2rem 0.05rem 0rem #ff2e63; */
-    text-align: left;
-    /* margin-left: 9rem; */
-    margin : 0rem 0rem 2rem 0rem;
+  position: relative;
+  font-size: 2.5rem;
+  font-weight: bolder;
+  color: #eeee;
+  text-align: left;
+  margin-left: 150px;
 }
 
-.calendarBodyBorder{
-    width: 100%;
-    height: 100%;
+.calendarBodyBorder {
+  margin: 0 auto;
 }
 
 .calendarBody {
-    /* height: 100%; */
-    border-color: whitesmoke;
-    overflow: auto;
-    margin-top: 30px;
+  border-color: whitesmoke;
+  overflow: auto;
+  margin-top: 30px;
 }
 
 .calendarTop {
-    display: flex;
-    /* margin-right: 10rem; */
-    margin-left: 28%;
+  display: flex;
+  margin: 0 auto;
 }
 
 .month {
-  /* justify-content: center; */
   color: #eeee;
   margin-right: 1rem;
   font-size: 2rem;
@@ -66,25 +56,23 @@
 }
 
 .week {
-    width: 10px;
-    height: 4rem;
-    display: table-row;
+  width: 10px;
+  height: 4rem;
+  display: table-row;
 }
 
 .day {
-    position : relative;
-    display: table-cell;
-    padding: 0;
-    color : #f3f3f3;
-    text-align: center;
-    justify-content: center;
-    padding : 0rem 4rem 0.5rem 4rem;
-    border-color: whitesmoke;
-    border: 0.1rem solid white;
-    font-weight: bold;
-    font-family: 'Poppins', sans-serif;
-    width : 13%;
-    height : 16%;
+  position: relative;
+  display: table-cell;
+  color: #f3f3f3;
+  text-align: center;
+  justify-content: center;
+  border-color: whitesmoke;
+  border: 0.1rem solid white;
+  font-weight: bold;
+  font-family: "Poppins", sans-serif;
+  width: 10vw;
+  height: 10vh;
 }
 
 .icon {
@@ -102,10 +90,10 @@
 }
 
 .none {
-    color: transparent;
+  color: transparent;
 }
 
 .partyicon {
-    width: 40px;
-    height: 40px;
+  width: 40px;
+  height: 40px;
 }
