--- a/frontend/src/components/Profile/Profile.module.css
+++ b/frontend/src/components/Profile/Profile.module.css
@@ -1,10 +1,16 @@
 .profileForm {
   padding: 50px;
+  height: calc(100vh - 64px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 .profileForm .title {
   color: #eee;
   font-size: 32px;
   margin-bottom: 50px;
+  width: 100%;
 }
 .profile {
   display: flex;
@@ -88,7 +94,7 @@
 }
 
 .friendProfile {
-  width: 700px;
+  width: 800px;
   height: 470px;
   background-color: #eee;
   border-radius: 20px;
@@ -102,6 +108,7 @@
 }
 .mainTitle {
   font-size: 32px;
+  margin-right: 20px;
 }
 .subTitle {
   font-size: 16px;
@@ -113,7 +120,7 @@
   justify-content: space-around;
 }
 .friendInfo {
-  width: 140px;
+  width: 160px;
   height: 160px;
   position: relative;
   display: flex;
@@ -137,4 +144,55 @@
 
 .sunday-weekday {
   background-color: red;
+}
+
+@media screen and (min-width: 1800px) {
+  .userProfile {
+    width: 600px;
+    height: 670px;
+  }
+
+  .userInfoForm .userInfoData label {
+    font-size: 20px;
+  }
+  .userInfoForm .userInfoData input {
+    font-size: 28px;
+  }
+
+  .friendTitle {
+    margin-bottom: 50px;
+  }
+  .friendProfile {
+    width: 1000px;
+    height: 670px;
+    background-color: #eee;
+    border-radius: 20px;
+    padding: 30px 100px;
+  }
+
+  .profileImg {
+    width: 170px;
+    height: 170px;
+    border-radius: 20px;
+    margin-right: 20px;
+  }
+
+  .editIcon {
+    width: 50px;
+    height: 50px;
+  }
+  .friendInfo {
+    width: 250px;
+    height: 200px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+  }
+
+  .friendProfileImg {
+    width: 140px;
+    height: 160px;
+    border-radius: 50%;
+  }
 }
