--- a/frontend/src/components/Game/Setting.module.css
+++ b/frontend/src/components/Game/Setting.module.css
@@ -17,7 +17,7 @@
   
   .modalForm .title {
     font-size: 30px;
-    margin : 0px 13px 0px 10px;
+    margin : 0px 13px 0px 13px;
     font-weight: bolder;
     color : #252a34;
 ;
@@ -27,12 +27,13 @@
     cursor: pointer;
     border: 0;
   }
+  
   .modal > section {
-    width: 250px;
-    height: 300px;
+    width: 300px;
+    height: 320px;
     /* margin: 0 auto; */
     border-radius: 50px;
-    background-color: rgba(238, 238, 238, 0.623);
+    background-color: #eee;
     /* 팝업이 열릴때 스르륵 열리는 효과 */
     animation: modal-show 0.3s;
     overflow: hidden;
@@ -58,11 +59,18 @@
     background-color: #08d9d6;
     margin-right: 20px;
 }
-.confirmBtn {
+.confirmBtn , .closeBtn {
     background-color: #08d9d6;
     width: 80px;
     height: 30px;
     border-radius: 10px;
+    font-size: 15px;
+    font-weight: bold;
+    color: #eee;
+    margin: 0px 10px 0px 10px;
+  }
+.closeBtn {
+    background-color:#ff5722;
   }
   .modal.openModal {
     display: flex;
@@ -71,20 +79,26 @@
     /* 팝업이 열릴때 스르륵 열리는 효과 */
     animation: modal-bg-show 0.3s;
   }
-  .icon {
-    height: 50px;
-    width: 50px;
+  .titleSection {
+    height: 20%;
+    width: 80%;
+    margin: 30px 0px 0px 0px;
+    display: flex;
+    justify-content: space-around;
   }
-  
+  .title {
+    font-size: 40px;
+    margin: 0px 13px 0px 13px;
+    font-weight: bolder;
+    color: #252a34;
+  }
   .main {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
     align-items: center;
     height: 100%;
     font-family: 'Poppins', sans-serif;
   }
- 
   .logo {
     z-index: 1;
     position: relative;
@@ -97,40 +111,33 @@
     width: 100%;
     margin-bottom: 30px;
   }
-  .closeBtn {
-    float: right;
-    width: 30px;
-    height: 30px;
-    margin: 15px 30px 0px 0px;
-    border-radius: 8px;
-    background-color: #eee;
-  }
-  .informBorder {
-    align-items: center;
+.buttonBorder {
+    margin-top: 20px;
+}
+.sound, .mic {
+    margin: 25px 0px 30px 0px;
     display: flex;
-    flex-direction: column;
-  }
-  .informText {
-      font-weight: bolder;
-      font-size: 20px;
-      width : 80%;
-  }
-  .inputKeyword {
-    border-radius: 10px;
-    height: 33px;
-    background-color: #eee;
-    padding: 10px;
-    font-size: 15px;
-  }
-  .confirmBtn {
-    font-size: 15px;
-    font-weight: bold;
-  }
-  .text {
-    text-align: center;
-    font-size: 20px;
-    font-weight: bolder;
-  }
+}
+.text {
+    margin:0px 20px 0px 0px;
+}
+input[type=range] {
+    -webkit-appearance: none;
+    height: 3px;
+    margin-top: 11px;
+    background-color: #252a34;
+}
+input[type=range]::-webkit-slider-thumb{
+    -webkit-appearance: none; /*기본 스타일을 사용할지 말지 정하기*/
+    height: 18px;
+    width: 18px;
+    border-radius: 15px;
+    outline: 0;
+    border: 0;
+    background-color: #0075ff;
+}
+
+
 
   @keyframes modal-show {
     from {
