--- a/frontend/src/components/Regist/RegisterTemplate.module.css
+++ b/frontend/src/components/Regist/RegisterTemplate.module.css
@@ -38,7 +38,7 @@
 
 .contents {
   height: 100%;
-  padding: 50px 0;
+  padding: 30px 0;
 }
 
 .progressBar {
@@ -227,8 +227,16 @@
   color: #eee;
   padding: 0;
 }
+
+.inputRow.findpwdInput {
+  margin-bottom: 20px;
+}
 @media screen and (min-width: 1800px) {
   .innerContainer {
     padding: 150px 0;
+  }
+
+  .contents {
+    padding: 50px 0;
   }
 }
