#S06P12A507-197/[Fix] Main.css 및 캘린더, 로그인, 프로필 css

--- a/frontend/src/components/Calendar/CalendarPage.module.css
+++ b/frontend/src/components/Calendar/CalendarPage.module.css
@@ -9,7 +9,8 @@
 .calendarForm {
   display: flex;
   flex-direction: column;
-  margin-top: 10vh;
+  /* margin-top: 10vh; */
+  /* margin-top: 64px; */
 }
 
 .calendarHeader {
