#S06P12A507-167/[Add] 캘린더 페이지 드롭다운 css 수정

--- a/frontend/src/components/Calendar/CalendarPage.module.css
+++ b/frontend/src/components/Calendar/CalendarPage.module.css
@@ -82,6 +82,10 @@
 .partyicon {
   width: 40px;
   height: 40px;
+  border: none;
+  background-image: url('../../assets/icons/party.svg');
+  background-size: contain;
+  background-color: transparent;
 }
 .iconBtn {
   background-color: transparent;
