--- a/frontend/src/components/Profile/Profile.module.css
+++ b/frontend/src/components/Profile/Profile.module.css
@@ -76,10 +76,14 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
+
+.editbirth{
+  width: 50px;
+  text-align: center;
+}
 .userInfoData.userInfoDataEdit input {
   border-bottom: 1px solid rgba(0, 0, 0, 1);
 }
-
 .editRow {
   width: 100%;
   text-align: right;
