--- a/frontend/src/components/Profile/Profile.module.css
+++ b/frontend/src/components/Profile/Profile.module.css
@@ -148,7 +148,7 @@
   background-color: red;
 }
 
-@media screen and (min-width: 1800px) {
+/* @media screen and (min-width: 1800px) {
   .userProfile {
     width: 600px;
     height: 670px;
@@ -197,4 +197,4 @@
     height: 160px;
     border-radius: 50%;
   }
-}
+} */
