#S06P12A507-205/[Add] 프로필 이미지, 방 썸네일 업로드 추가

--- a/frontend/src/components/Modals/RoomConfig.module.css
+++ b/frontend/src/components/Modals/RoomConfig.module.css
@@ -60,10 +60,15 @@
   right: 0;
   padding: 0;
   background: transparent;
+  display: none;
 }
 .configForm .uploadImage {
   width: 30px;
   height: 30px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  padding: 0;
 }
 
 label {
