[Add] 로딩 스피너, 방 대기실 정렬 구현

--- a/frontend/src/components/Profile/Profile.module.css
+++ b/frontend/src/components/Profile/Profile.module.css
@@ -22,6 +22,7 @@
   height: 470px;
   background-color: #eee;
   border-radius: 20px;
+  border-style: none;
   padding: 20px;
   display: flex;
   flex-direction: column;
