#S06P12A507-190/[Add]프로필 스타일 수정

--- a/frontend/src/components/Profile/Profile.module.css
+++ b/frontend/src/components/Profile/Profile.module.css
@@ -15,7 +15,12 @@
 }
 .profile {
   display: flex;
+  flex-direction: column;
   justify-content: center;
+}
+
+.sections {
+  display: flex;
 }
 .userProfile {
   width: 400px;
@@ -77,8 +82,7 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
-
-.editbirth{
+.editbirth {
   width: 50px;
   text-align: center;
 }
@@ -153,7 +157,7 @@
   background-color: red;
 }
 
-/* @media screen and (min-width: 1800px) {
+@media screen and (min-width: 1800px) {
   .userProfile {
     width: 600px;
     height: 670px;
@@ -202,4 +206,4 @@
     height: 160px;
     border-radius: 50%;
   }
-} */
+}
