#S06P12A507-174/[Add] 캘린더-특정 날 파티 목록 조회 프론트 연동

--- a/frontend/src/components/Calendar/CalendarPage.module.css
+++ b/frontend/src/components/Calendar/CalendarPage.module.css
@@ -105,6 +105,7 @@
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.3);
   opacity: 0;
   visibility: hidden;
+  /* display: none; */
   transform: translateY(-20px);
   transition: opacity 0.4s ease, transform 0.4s ease, visibility 0.0s;
   z-index: 1;
