--- a/frontend/src/components/Modals/RegistMusic/RegistMusic.module.css
+++ b/frontend/src/components/Modals/RegistMusic/RegistMusic.module.css
@@ -17,7 +17,8 @@
 
 .btnRow {
   width: 100%;
-  text-align: right;
+  display: flex;
+  justify-content: space-between;
 }
 .closeBtn,
 .registBtn,
@@ -27,10 +28,23 @@ input {
   border: 0;
   background-color: transparent;
 }
-.registBtn {
-  font-size: 30px;
+.closeBtn {
+  width: auto;
 }
 
+.registBtnRow {
+  text-align: right;
+}
+.registBtn {
+  font-size: 30px;
+  width: auto;
+}
+
+.title {
+  font-size: 50px;
+  color: #000;
+  margin: 0;
+}
 input {
   margin-bottom: 30px;
   font-size: 30px;
@@ -40,9 +54,9 @@ input {
   height: 550px;
   /* margin: 0 auto; */
   border-radius: 50px;
-  /* background-color: #fff9a3; */
-  background-image: url(../../assets/images/Sketchbook.JPG);
-  background-size: cover;
+  background-color: #fff9a3;
+  /* background-image: url(../../assets/images/Sketchbook.JPG); */
+  /* background-size: cover; */
   /* 팝업이 열릴때 스르륵 열리는 효과 */
   animation: modal-show 0.3s;
   overflow: hidden;
@@ -52,7 +66,7 @@ input {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 65%;
+  height: 80%;
 }
 
 .configForm {
