--- a/frontend/src/components/Calendar/ConferenceDetail.module.css
+++ b/frontend/src/components/Calendar/ConferenceDetail.module.css
@@ -181,6 +181,10 @@
     padding : 4px;
   }
 
+  .partyStartTimeTitle {
+    width : 95px;
+  }
+
   .partyStartTimeTitle + div {
     font-weight: bolder;
   }
