--- a/frontend/src/components/Modals/RegistMusic.module.css
+++ b/frontend/src/components/Modals/RegistMusic.module.css
@@ -8,7 +8,8 @@
   z-index: 99;
   background-color: rgba(255, 255, 255, 0.5);
   font-family: "손글씨체";
-  font-weight: 700;
+  font-weight: 7
+  00;
 }
 
 .modalForm {
