[Add] 오픈 비두 툴바, 스트림컴포넌트 변경

--- a/frontend/src/components/Room/stream/StreamComponent.css
+++ b/frontend/src/components/Room/stream/StreamComponent.css
@@ -34,6 +34,7 @@
 }
 
 .streamComponent {
+  width: 100%;
   height: 100%;
 }
 
@@ -87,7 +88,14 @@ video {
   position: absolute;
   overflow: hidden;
 }
-
+/* .controlbox{
+  bottom:-50px;
+  transition: all ease 1s 0s;
+} */
+/* .OT_widget-container:hover > .controlbox{
+  bottom:0px;
+  transition: all ease 1s 0s;
+} */
 #input,
 #label {
   color: white;
