#S06P12A507-235/[Add] 채팅컴포넌트 css처리

--- a/frontend/src/components/Room/VideoRoomComponent.css
+++ b/frontend/src/components/Room/VideoRoomComponent.css
@@ -888,3 +888,11 @@
   margin-top: 40px;
 }
   
+
+#chatComponent {
+  width : 25%;
+  position : absolute;
+  top : 0%;
+  left : 75%;
+  height : 100%;
+}
