--- a/frontend/src/components/Room/chat/Chat.module.css
+++ b/frontend/src/components/Room/chat/Chat.module.css
@@ -2,7 +2,7 @@
     position: absolute;
     z-index: 0;
     width: 100%;
-    height: 100%;
+    height: 95%;
     display: block;
   }
   
@@ -23,6 +23,9 @@
     position: absolute;
     right: 0;
     top: -8px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
   }
   
   .chatComponent {
@@ -151,12 +154,13 @@
   
   .messageInput {
     position: absolute;
+    display: flex;
     bottom: 0px;
     width: 100%;
     background-color: #ffffff;
     text-align: center;
-    padding: 10px 0px;
-    height: 30px;
+    padding: 0px 0px;
+    height: 50px;
     border-bottom-left-radius: 6px;
     border-bottom-right-radius: 6px;
   }
@@ -166,23 +170,31 @@
     border: none;
     outline: none;
     font-size: 14px;
-    margin-left: -6%;
+    margin-left: 10px;
     color: #000000;
+    background-color: transparent;
+  }
+
+  .messageInput input:focus {
+    background-color: transparent;
   }
   
   .sendButton {
-    background-color: #81e9b0;
     position: absolute;
     right: 10px;
     top: 0;
     bottom: 0;
     margin: auto;
-    border: 1px solid #7ae2a9;
+    /* border: 1px solid #7ae2a9; */
     box-shadow: none !important;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
   }
-  .sendButton {
-    margin-left: 3px !important;
-    margin-bottom: 2px !important;
+
+  #sendButton {
+    /* margin-left: 3px !important; */
+    /* margin-bottom: 2px !important; */
   }
   
   ::-webkit-scrollbar {
@@ -196,4 +208,5 @@
   .chatComponentLight ::-webkit-scrollbar-thumb {
     background-color: #eeeeee !important;
   }
+
   
