--- a/frontend/src/components/Room/toolbar/ToolbarComponent.module.css
+++ b/frontend/src/components/Room/toolbar/ToolbarComponent.module.css
@@ -13,7 +13,8 @@
 }
 
 .buttonClass {
-  background-color: #ffffff;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 15px 0px 0px;
 }
 .buttons {
   margin: 0 auto;
