--- a/frontend/src/components/Room/Room.module.css
+++ b/frontend/src/components/Room/Room.module.css
@@ -18,7 +18,7 @@
   /* width: 1200px; */
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   margin-right: 20px;
 }
 .title {
