--- a/frontend/src/components/Room/stream/StreamComponent.css
+++ b/frontend/src/components/Room/stream/StreamComponent.css
@@ -37,6 +37,11 @@
   width: 100%;
   height: 100%;
 }
+.video-container {
+  width: 250px;
+  height: 250px;
+  position: relative;
+}
 
 video {
   -o-object-fit: cover;
@@ -66,36 +71,6 @@ video {
   padding: 6px;
 }
 
-#fullscreenButton {
-  position: absolute;
-  bottom: 1px;
-  right: 1px;
-  z-index: 1000;
-  background-color: #000000c4;
-}
-#volumeButton {
-  background-color: #000000c4;
-  position: absolute;
-  bottom: 45px;
-  right: 1px;
-  z-index: 1000;
-  color: #ffffff;
-}
-/* Contains the video element, used to fix video letter-boxing */
-.OT_widget-container {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  overflow: hidden;
-}
-/* .controlbox{
-  bottom:-50px;
-  transition: all ease 1s 0s;
-} */
-/* .OT_widget-container:hover > .controlbox{
-  bottom:0px;
-  transition: all ease 1s 0s;
-} */
 #input,
 #label {
   color: white;
