--- a/frontend/src/components/Room/VideoRoomComponent.css
+++ b/frontend/src/components/Room/VideoRoomComponent.css
@@ -890,9 +890,11 @@
   
 
 #chatComponent {
+  /* width : 20%; */
   width : 25%;
   position : absolute;
   top : 0%;
-  left : 75%;
+  /* left : 78%; */
+  left : 73%;
   height : 100%;
 }
