--- a/frontend/src/components/Modals/RoomEnter/IntoRoom.module.css
+++ b/frontend/src/components/Modals/RoomEnter/IntoRoom.module.css
@@ -24,6 +24,72 @@
     overflow: hidden;
     padding: 30px 40px;
 }
+.pwdmodalForm {
+    position: relative;
+    width: 500px;
+    height: 250px;
+    /* margin: 0 auto; */
+    border-radius: 50px;
+    background-color: #eee;
+    text-align: left;
+    /* 팝업이 열릴때 스르륵 열리는 효과 */
+    animation: modal-show 0.3s;
+    overflow: hidden;
+    padding: 30px 40px;
+}
+.pwdbox{
+    /* float: right; */
+    display: block;
+    height: 100%;
+    /* text-align: center; */
+}
+.inputData {
+    height: 50px;
+    font-size: 26px;
+    font-family: "Poppins", sans-serif;
+    border: 5px solid rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+    background-color: transparent;
+    /* color: white; */
+    margin: 30px auto 0px;
+    padding: 10px;
+    font-weight: 500;
+    width: 70%;
+    cursor: text;
+}
+.inputData:focus{
+    border: 5px solid rgba(0, 125, 154, 0.5);
+}
+.check{
+    /* float: right; */
+    position : absolute;
+    display: block;
+    width: 80px;
+    height: 40px;
+    /* margin-top: 20px; */
+    padding: 6px 12px;
+    border-radius: 10px;
+    top : 190px;
+    font-size: 13px;
+    right : 35px;
+    background-color: #08d9d6;
+}
+.errorMsg{
+    margin-top: 5px;
+    margin-left: 5px;
+    display: block;
+    color: red;
+    font-size: 12px;
+    font-weight: bold;
+}
+/* .pwd{
+    border: #252a34;
+    border-style: solid;
+    width: 300px;
+    padding: 0px 5px 5px 15px ;
+    color :rgba(0, 0, 0, 1);
+    font-size: 36px;
+} */
 .modalForm h1 {
     margin-bottom: 30px;
     font-weight: bold;
