--- a/frontend/src/components/Calendar/CalendarPage.module.css
+++ b/frontend/src/components/Calendar/CalendarPage.module.css
@@ -4,11 +4,13 @@
   display: flex;
   justify-content: center;
   /* justify-content: space-around; */
+  /* text-align: center; */
 }
 .calendarForm {
   display: flex;
   flex-direction: column;
   margin-top: 5vh;
+  width: 60vw;
 }
 .calendarHeader {
   position: relative;
@@ -31,39 +33,168 @@
 }
 .calendarBody {
   border-color: whitesmoke;
-  /* overflow: auto; */
+
   margin-top: 30px;
 }
-.calendarTop {
-  display: flex;
-  margin: 0 auto;
-}
+
 .month {
   color: #eeee;
-  margin-right: 1rem;
   font-size: 2rem;
   font-weight: bolder;
   text-align: left;
-  margin-left: 0rem;
   font-size: 2.5rem;
+
+  width: 52.5vw;
 }
 .week {
+  cursor:default;
   width: 10px;
   height: 4rem;
   display: table-row;
 }
+.weekday{
+  cursor:default;
+  color:black;
+}
 .day {
   position: relative;
   display: table-cell;
-  color: #f3f3f3;
-  text-align: center;
+  padding: 0 15px;
   justify-content: center;
-  border-color: whitesmoke;
-  border: 0.1rem solid white;
+  background-color: #eee;
+  border-style: none dashed dashed none;
+  border-width: 0.1rem;
+  border-color: black;
   font-weight: bold;
   font-family: "Poppins", sans-serif;
-  width: 10vw;
-  height: 10vh;
+  width: 7.5vw;
+  height: 11.5vh;
+}
+.dayotherRowFirst {
+  position: relative;
+  display: table-cell;
+  color: #f3f3f3;
+  padding: 0 15px;
+  background-color: #eee;
+  justify-content: center;
+  border-style: none dashed dashed none;
+  border-width: 0.1rem;
+  border-color: black;
+  font-weight: bold;
+  font-family: "Poppins", sans-serif;
+  width: 7.5vw;
+  height: 11.5vh;
+}
+.dayLastRow {
+  position: relative;
+  display: table-cell;
+  color: #f3f3f3;
+  padding: 0 15px;
+  justify-content: center;
+  border-radius: 0px 0px 0px 25px;
+  border-style: none dashed none none;
+  border-width: 0.1rem;
+  border-color : black;
+  background-color: #eee;
+  font-weight: bold;
+  font-family: "Poppins", sans-serif;
+  width: 7.5vw;
+  height: 11.5vh;
+}
+.dayLastRowEnd {
+  position: relative;
+  display: table-cell;
+  color: #f3f3f3;
+  padding: 0 15px;
+  justify-content: center;
+  border-radius: 0px 0px 25px 0px;
+  border-style: none none none none;
+  background-color: #eee;
+  font-weight: bold;
+  font-family: "Poppins", sans-serif;
+  width: 7.5vw;
+  height: 11.5vh;
+}
+.dayotherRowEnd {
+  position: relative;
+  display: table-cell;
+  color: #f3f3f3;
+  padding: 0 15px;
+  justify-content: center;
+  border-style: none none dashed none;
+  border-width: 0.1rem;
+  background-color: #eee;
+  border-color: black;
+  font-weight: bold;
+  font-family: "Poppins", sans-serif;
+  width: 7.5vw;
+  height: 11.5vh;
+}
+.dayotherRow {
+  position: relative;
+  display: table-cell;
+  color: #f3f3f3;
+  padding: 0 15px;
+  justify-content: center;
+  border-style: none dashed dashed none;
+  border-width: 0.1rem;
+  background-color: #eee;
+  border-color: black;
+  font-weight: bold;
+  font-family: "Poppins", sans-serif;
+  width: 7.5vw;
+  height: 11.5vh;
+}
+.dayLastRowother {
+  position: relative;
+  display: table-cell;
+  color: #f3f3f3;
+  padding: 0 15px;
+  justify-content: center;
+  border-style: none dashed none none;
+  border-width: 0.1rem;
+  background-color: #eee;
+  border-color: black;
+  font-weight: bold;
+  font-family: "Poppins", sans-serif;
+  width: 7.5vw;
+  height: 11.5vh;
+}
+.dayfirstRow {
+  position: relative;
+  display: table-cell;
+  color: #f3f3f3;
+  padding: 0 15px;
+  justify-content: center;
+  background-color: #eee;
+  border-style: none dashed dashed none;
+  border-width: 0.1rem;
+  border-color: black;
+  font-weight: bold;
+  font-family: "Poppins", sans-serif;
+  width: 7.5vw;
+  height: 11.5vh;
+}
+.dayfirstRowEnd {
+  position: relative;
+  display: table-cell;
+  color: #f3f3f3;
+  padding: 0 15px;
+  justify-content: center;
+  border-style: none none dashed none;
+  border-width: 0.1rem;
+  background-color: #eee;
+  border-color: black;
+  font-weight: bold;
+  font-family: "Poppins", sans-serif;
+  width: 7.5vw;
+  height: 11.5vh;
+}
+.dayreal{
+  margin-top: 10px;
+  text-align: right;
+  margin-bottom: 0;
+  width: 100%;
 }
 .icon {
   width: 50px;
@@ -76,10 +207,17 @@
 .saturday {
   color: #08d9d6;
 }
-.none {
-  color: transparent;
+.sundisable{
+  color: rgba(255, 46, 99, 0.4);
+}
+.satdisable{
+  color: rgba(8, 217, 214, 0.4);
+}
+.wkddisable{
+  color: rgb(0, 0, 0, 0.4)
 }
 .partyicon {
+  /* display: inline; */
   width: 40px;
   height: 40px;
   border: none;
@@ -87,13 +225,35 @@
   background-size: contain;
   background-color: transparent;
 }
+.partyicon:hover {
+  /* animation: shake 1s; */
+	transform: rotate( -25deg );
+}
+/* @keyframes shake {
+  0% {
+    transform: rotate( 0deg );
+  }
+  25% {
+    transform: rotate( -45deg );
+  }
+  50% {
+    transform: rotate( 0deg );
+  }
+  75%{
+    transform: rotate( 45deg );
+  }
+  100%{
+    transform: rotate( 0deg );
+  }
+} */
 .iconBtn {
   background-color: transparent;
   border: none;
 }
 .container {
-  box-shadow: 0 4px 5px 0 #00000026;
   position: relative;
+  text-align: center;
+  margin-top: 15px;
 }
 .partyList {
   background: rgb(255, 86, 34);
@@ -132,25 +292,6 @@
   visibility: visible;
   transform: translateY(0);
 }
-.iconBtn {
-  border-radius: 90px;
-  cursor: pointer;
-  align-items: center;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
-  border: none;
-  transition: box-shadow 0.4s ease;
-}
-
-.iconBtn:hover {
-  box-shadow: 0 1px 8px rgba(0, 0, 0, 0.3);
-}
-
-.iconBtn span {
-  font-weight: 700;
-  vertical-align: middle;
-  font-size: 12px;
-  margin: 0 5px;
-}
 .partyList ul {
   list-style: none;
   padding: 0;
@@ -172,4 +313,50 @@
   margin-bottom: 0px;
   width: 100%;
   /* border-bottom: 1px solid #eee; */
+}
+.title{
+  cursor:default;
+  position: relative;
+  display: table-cell;
+  color: #f3f3f3;
+  padding: 10px 15px;
+  justify-content: center;
+  text-align: center;
+  border : none;
+  border-radius: 15px 0px 0px;
+  font-weight: bold;
+  font-family: "Poppins", sans-serif;
+  background-color: tomato;
+  width: 7.5vw;
+  height: 4.5vh;
+}
+.titleOther{
+  cursor:default;
+  position: relative;
+  display: table-cell;
+  color: #f3f3f3;
+  justify-content: center;
+  text-align: center;
+  background-color: tomato;
+  border : none;
+  font-weight: bold;
+  font-family: "Poppins", sans-serif;
+  width: 7.5vw;
+  height: 4.5vh;
+}
+.titleLast{
+  cursor:default;
+  position: relative;
+  display: table-cell;
+  color: #f3f3f3;
+  padding: 10px 15px;
+  background-color: tomato;
+  justify-content: center;
+  text-align: center;
+  border : none;
+  border-radius: 0px 15px 0px 0px; 
+  font-weight: bold;
+  font-family: "Poppins", sans-serif;
+  width: 7.5vw;
+  height: 4.5vh;
 }
