--- a/frontend/src/components/RoomList/RoomList.module.css
+++ b/frontend/src/components/RoomList/RoomList.module.css
@@ -1,158 +1,158 @@
+.container {
+  margin: 20px;
+  width: 100%;
+}
+.srow {
+  margin: 30px auto 0px 0px;
+}
+.searchbox {
+  position: relative;
+  text-align: center;
+}
+.searchdiv {
+  position: relative;
+  width: 400px;
+  display: inline-block;
+}
+.search {
+  width: 100%;
+  height: 32px;
+  padding: 10px 12px;
+  border-radius: 15px;
+  border-style: none;
+  background-color: #eeeeee;
+  color: black;
+  opacity: 70%;
+  outline: none;
+}
+.search:focus {
+  opacity: 1;
+}
+.sbutton {
+  position: absolute;
+  width: 58px;
+  height: 28px;
+  border-radius: 15px;
+  border-style: none;
+  padding: 0;
+  right: 5px;
+  top: 2px;
+  background-color: #08d9d6;
+  font-weight: bold;
+  cursor: pointer;
+}
+.select {
+  height: 32px;
+  text-align: center;
+  position: absolute;
+  left: -150px;
+  border-style: none;
+  color: white;
+  background-color: #252a34;
+  cursor: pointer;
+  outline: none;
+  appearance: none;
+}
+.list {
+  text-align: center;
+  height: 79vh;
+  background-color: #252a34;
+  overflow: scroll;
+}
+.list::-webkit-scrollbar {
+  display: none;
+  width: 0 !important;
+}
+.room {
+  position: relative;
+  /* background-color: ; */
+  width: 400px;
+  height: 500px;
 
-.container{
-    margin: 20px;
-    width: 100%;
+  /* margin-bottom: 10%; */
+  margin: 50px auto 15%;
+  border-radius: 25px;
+  border-style: none;
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  box-shadow: 0px 10px 13px -7px #000000, 9px 13px 29px -3px rgba(0, 0, 0, 0);
 }
-.srow{
-    margin : 30px auto 0px 0px;
+
+.room:hover {
+  transform: translateY(-7px);
 }
-.searchbox{
-    position: relative;
-    text-align: center;
+.roomthumb {
+  width: 100%;
+  height: 300px;
+  border-radius: 25px 25px 0px 0px;
 }
-.searchdiv{
-    position: relative;
-    width: 400px;
-    display: inline-block;
-    
+.roomlabel {
+  position: absolute;
+  width: 90px;
+  height: 30px;
+  background-color: #ff5722;
+  color: #eeeeee;
+  font-weight: bold;
+  margin: 5px 10px;
+  border-radius: 45px;
+  padding: 3px 0;
 }
-.search{
-    width: 100%;
-    height: 32px;
-    padding: 10px 12px;
-    border-radius: 15px;
-    border-style: none;
-    background-color: #EEEEEE;
-    color: black;
-    opacity: 70%;
-    outline: none;
-}
-.search:focus{
-    opacity: 1;
-}
-.sbutton{
-    position:absolute;
-    width: 58px;
-    height: 28px;
-    border-radius: 15px;
-    border-style: none;
-    padding: 0;
-    right: 5px;
-    top : 2px;
-    background-color: #08d9d6;
-    font-weight: bold;
-    cursor: pointer;
-}
-.select{
-    height: 32px;
-    text-align: center;
-    position: absolute;
-    left: -150px;
-    border-style: none;
-    color:white;
-    background-color: #252a34;
-    cursor: pointer;
-    outline: none;
-    appearance: none;
-}
-.list{
-    text-align: center;
-    height: 79vh;
-    background-color: #252a34;
-    overflow: scroll;
-}
-.list::-webkit-scrollbar { 
-    display: none;
-    width: 0 !important;
-}
-.room{
-    position: relative;
-    /* background-color: ; */
-    width: 400px;
-    height: 500px;
-    
-    /* margin-bottom: 10%; */
-    margin: 50px auto 15%;
-    border-radius: 25px;
-    border-style: none;
-    transition: all 0.3s ease 0s;
-    cursor: pointer;
-}
-.room:hover{
-    transform: translateY(-7px);
-}
-.roomthumb{
-    width: 100%;
-    height: 300px;
-    border-radius: 25px 25px 0px 0px;
-}
-.roomlabel{
-    position: absolute;
-    width: 90px;
-    height: 30px;
-    background-color: #ff5722;
-    color: #EEEEEE;
-    font-weight: bold;
-    margin: 5px 10px;
-    border-radius: 45px;
-    padding: 3px 0;
-}
-.svg{
-    position: absolute;
-    margin-left: -40px;
-    margin-top: 7px;
-	align-self: center;
-	width: 20px;
-	height: 20px;
+.svg {
+  position: absolute;
+  margin-left: -40px;
+  margin-top: 7px;
+  align-self: center;
+  width: 20px;
+  height: 20px;
 }
 .about {
-    text-align: left;
-    background: rgba(238, 238, 238, 0.1);
-    height: 200px;
-    border-radius: 0px 0px 25px 25px;
+  text-align: left;
+  background: rgba(238, 238, 238, 0.1);
+  height: 200px;
+  border-radius: 0px 0px 25px 25px;
 }
-.about h3{
-    /* display: inline-block; */
-    color :#EEEEEE;
-    float: left;
-    opacity: 1;
-    margin: 15px 10px;
+.about h3 {
+  /* display: inline-block; */
+  color: #eeeeee;
+  float: left;
+  opacity: 1;
+  margin: 15px 10px;
 }
-.about h5{
-    color :#EEEEEE;
-    float: left;
-    opacity: 1;
-    margin: 8px 10px;
-    padding: 0px 30px 0px 0px;
+.about h5 {
+  color: #eeeeee;
+  float: left;
+  opacity: 1;
+  margin: 8px 10px;
+  padding: 0px 30px 0px 0px;
 }
-.footer{
-    position: absolute;
-    color :#EEEEEE;
-    width: 100%;
-    height: 50px;
-    top : 450px;
-    /* margin-left: 40px; */
+.footer {
+  position: absolute;
+  color: #eeeeee;
+  width: 100%;
+  height: 50px;
+  top: 450px;
+  /* margin-left: 40px; */
 }
-.footer h5{
-    margin-top: 10px;
-    float: left;
+.footer h5 {
+  margin-top: 10px;
+  float: left;
 }
-.footer h3{
-    float: right;
-    font-weight: bold;
-    margin-top: 5px;
-    margin-right: 10px;
+.footer h3 {
+  float: right;
+  font-weight: bold;
+  margin-top: 5px;
+  margin-right: 10px;
 }
-.fulluser{
-    color : #ff2e63;
+.fulluser {
+  color: #ff2e63;
 }
-.clock{
-    float: left;
-    margin : 13px 10px 0px 10px;
+.clock {
+  float: left;
+  margin: 13px 10px 0px 10px;
 }
-.lock{
-    float: right;
-    margin: 15px 15px;
-    width: 40px;
-    height: 40px;
+.lock {
+  float: right;
+  margin: 15px 15px;
+  width: 40px;
+  height: 40px;
 }
