--- a/frontend/src/components/Room/Room.module.css
+++ b/frontend/src/components/Room/Room.module.css
@@ -1,3 +1,32 @@
+.nav {
+  width: 100%;
+  height: 64px;
+  display: inline-block;
+}
+.link {
+  z-index: 1;
+  position: relative;
+  float: right;
+  margin-top: 32px;
+  margin-right: 5%;
+  font-weight: bold;
+  letter-spacing: 2.5px;
+  border: none;
+  width: 80px;
+  background-color: rgba(0, 0, 0, 0);
+  color: #eaeaea;
+  font-size: 20px;
+  text-decoration: none;
+  text-shadow: 0rem 1rem 0.5rem rgba(234, 234, 234, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+}
+.link:hover {
+  text-shadow: 0rem 1.5rem 2rem rgba(234, 234, 234, 0.5);
+  color: #eaeaea;
+  transform: translateY(-7px);
+}
 .container {
   color: #eee;
   height: calc(100vh - 100px);
