--- a/frontend/src/components/Modals/Game/Keyword.module.css
+++ b/frontend/src/components/Modals/Game/Keyword.module.css
@@ -7,8 +7,8 @@
     right: 0;
     bottom: 0;
     left: 0;
-    z-index: 99;
-    background-color: rgba(255, 255, 255, 0.473);
+    z-index: 99999999;
+    background-color: rgba(255, 255, 255, 0.596);
   }
   .modalForm header {
     display: flex;
@@ -32,7 +32,7 @@
     height: 300px;
     /* margin: 0 auto; */
     border-radius: 50px;
-    background-color: rgba(238, 238, 238, 0.623);
+    background-color: rgba(129, 127, 127, 0.945);
     /* 팝업이 열릴때 스르륵 열리는 효과 */
     animation: modal-show 0.3s;
     overflow: hidden;
@@ -110,7 +110,7 @@
     display: flex;
     flex-direction: column;
   }
-  .informText {
+  .informText{
       font-weight: bolder;
       font-size: 20px;
       width : 80%;
@@ -174,5 +174,15 @@
   input:focus,
   textarea:focus {
     outline: none;
+  }
+ 
+  .informCorrectText {
+    font-weight: bolder;
+    font-size: 20px;
+    width: 100%;
+  }
+  .correctText {
+    width : 100%;
+    color : #252525;
   }
   
