--- a/frontend/src/components/Room/game/YangGameComponent.module.css
+++ b/frontend/src/components/Room/game/YangGameComponent.module.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&family=Poppins:wght@400;500;600&display=swap");
+
 .postitInput {
     background-color:  #fff44f;
     height: 80%;
@@ -32,5 +34,9 @@
     align-content: center;
     justify-content: space-around;
     align-items: center;
+    color : #252525;
+    font-weight: bolder;
+    font-family: "Poppins", sans-serif;
+    cursor: pointer;
 }
 
