--- a/frontend/src/components/Room/Room.module.css
+++ b/frontend/src/components/Room/Room.module.css
@@ -29,18 +29,21 @@
 }
 .container {
   color: #eee;
-  height: calc(100vh - 100px);
+  height: 100vh;
   overflow: hidden;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   padding: 0px 30px;
   position: relative;
+  width: 100%;
+  /* margin : 0px 0px 0px 0px; */
 }
 .innerContainer {
   display: flex;
   width: 100%;
   height: 90%;
+  margin : 5px 15px 0px;
 }
 
 .contents {
@@ -149,9 +152,9 @@ video {
 }
 
 @media screen and (min-width: 1800px) {
-  .container {
+  /* .container {
     height: calc(100vh - 120px);
-  }
+  } */
   video {
     width: 300px;
     height: 300px;
