--- a/frontend/src/components/Room/snapshot/SnapShotResult.module.css
+++ b/frontend/src/components/Room/snapshot/SnapShotResult.module.css
@@ -14,10 +14,11 @@
   align-items: center;
   /* backdrop-filter: blur(10px); */
 }
-.blur {
+/* .blur:hover {
   filter: blur(5px);
   -webkit-filter: blur(5px);
-}
+} */
+
 .images {
   width: 100%;
   height: 92%;
@@ -53,19 +54,13 @@
   z-index: 99;
 }
 
-.resultBtns {
-  /* position: absolute;
-  top: 45%;
-  left: 30%;
-  z-index: 99; */
-}
-
 .snapshotBtn {
   display: flex;
-  /* width: 300px; */
+  justify-content: space-around;
+  width: 300px;
   position: absolute;
   top: 45%;
-  left: 30%;
+  /* left: 20%; */
   z-index: 99;
 }
 
